--- a/v4/app/templates/fechamento.html
+++ b/v4/app/templates/fechamento.html
@@ -7,10 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-
     <title>PROJETO BAYMAX</title> <!--Titulo da ABA-->
 </head>
-<body class="telaIndex">
+<body class="telaFechamento">
     <!-- Corpo do Site = Conteúdo -->
     <header id="cabecalho">
         <!-- Menu de Navegação -->
@@ -46,39 +45,23 @@
         </nav>
     </header>
     <section class="inicial">
-        <h1>Bem-Vindo!</h1>
+        <h1>Fechamento</h1>
     </section>
     <section class="templateInicial">
-        <img class="ti2" src="../Imagens/BaymaxOlá.png" alt="Imagem do Baymax Acenando" />
+        <img class="ti2" src="../Imagens/despedindo.jpg" alt="Imagem do Baymax Acenando" />
     </section>
-    <section class="inicial">
-        <h2>Introdução</h2>
-        <p1>
-            Bem-vindo ao site do nosso incrível projeto: "Projeto Baymax"! Aqui você conhecerá o Seu Assistente Baymax,
-            um robô projetado para tornar a vida no Senac muito mais fácil e divertida!
 
-            O Baymax está aqui para ajudar a superar todos os desafios que você possa encontrar durante sua jornada no Senac.
-            De encontrar salas de aula até descobrir os melhores livros a serem lidos, o Baymax está sempre pronto para tornar
-            sua vida acadêmica mais simples e descontraída.
-
-            Então, prepare-se para explorar todas as maravilhas que o Assistente Baymax tem a oferecer. Estamos ansiosos para
-            tornar sua experiência no Senac ainda mais incrível com o nosso amigável e prestativo Baymax ao seu lado!
-        </p1>
-    </section>
-    <section>
-
-            <h1>
-                Imagine a seguinte situação:
-            </h1>
-            <h3>Baymax ajudando alguém no campus</h3>
-            <p1>
-                Um recém-chegado ao campus do Senac deseja se familiarizar com os cursos oferecidos ali,
-                mas rapidamente percebe a falta de informações acessíveis para atender a essa necessidade.
-                Logo, ele se depara com avisos no chão e algumas placas indicando o caminho para o Assistente Baymax,
-                que está disponível para oferecer ajuda e orientação sobre o que precisar.
-            </p1>
-            <img class="gd" src="../Imagens/Baymax Ajudando.png" alt="BaymaxAjudando"/>
-        </article>
-    </section>
+    <!-- Seção de Fechamento -->
+    <footer>
+        <div class="contato-info">
+            <h2>Agradecimentos</h2>
+            <p>Agradecemos a todos que nos apoiaram e nos inspiraram durante este projeto emocionante.</p>
+            <h2>Inspirações</h2>
+            <p>Nosso projeto foi inspirado por grandes avanços na tecnologia e na inovação.</p>
+            <h2>Contato</h2>
+            <p>Telefone: <a href="tel:+11949937625">(11) 94993-7625</a></p>
+            <p>Email: <a href="mailto:baymaxprojeto@gmail.com">baymaxprojeto@gmail.com</a></p>
+        </div>
+    </footer>
 </body>
 </html>
