--- a/v4/app/templates/sobreNos.html
+++ b/v4/app/templates/sobreNos.html
@@ -7,10 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-
     <title>PROJETO BAYMAX</title> <!--Titulo da ABA-->
 </head>
-<body class="telaIndex">
+<body class="sobreNos">
     <!-- Corpo do Site = Conteúdo -->
     <header id="cabecalho">
         <!-- Menu de Navegação -->
@@ -46,39 +45,20 @@
         </nav>
     </header>
     <section class="inicial">
-        <h1>Bem-Vindo!</h1>
+        <h1>Sobre Nós</h1>
     </section>
     <section class="templateInicial">
-        <img class="ti2" src="../Imagens/BaymaxOlá.png" alt="Imagem do Baymax Acenando" />
+        <img class="ti2" src="../Imagens/sobre.jpg" alt="Imagem do Baymax Acenando" />
     </section>
     <section class="inicial">
-        <h2>Introdução</h2>
-        <p1>
-            Bem-vindo ao site do nosso incrível projeto: "Projeto Baymax"! Aqui você conhecerá o Seu Assistente Baymax,
-            um robô projetado para tornar a vida no Senac muito mais fácil e divertida!
+        <h2>Quem nós somos?</h2>
+        <p>
 
-            O Baymax está aqui para ajudar a superar todos os desafios que você possa encontrar durante sua jornada no Senac.
-            De encontrar salas de aula até descobrir os melhores livros a serem lidos, o Baymax está sempre pronto para tornar
-            sua vida acadêmica mais simples e descontraída.
-
-            Então, prepare-se para explorar todas as maravilhas que o Assistente Baymax tem a oferecer. Estamos ansiosos para
-            tornar sua experiência no Senac ainda mais incrível com o nosso amigável e prestativo Baymax ao seu lado!
-        </p1>
-    </section>
-    <section>
-
-            <h1>
-                Imagine a seguinte situação:
-            </h1>
-            <h3>Baymax ajudando alguém no campus</h3>
-            <p1>
-                Um recém-chegado ao campus do Senac deseja se familiarizar com os cursos oferecidos ali,
-                mas rapidamente percebe a falta de informações acessíveis para atender a essa necessidade.
-                Logo, ele se depara com avisos no chão e algumas placas indicando o caminho para o Assistente Baymax,
-                que está disponível para oferecer ajuda e orientação sobre o que precisar.
-            </p1>
-            <img class="gd" src="../Imagens/Baymax Ajudando.png" alt="BaymaxAjudando"/>
-        </article>
+             E aí, galera! Nós, Daniel Zambotti; Pedro Nogueira e Vitor Cavallini, somos um bando de estudantes empolgados do curso de Tecnologia da Informação,
+            lá na sala TI18N. Tamo aqui com uma energia lá em cima pra mostrar o nosso Projeto Integrador de Hardware.
+            Bora lá! Vamos te mostrar
+            como a tecnologia pode ser super legal e útil no nosso dia a dia. É diversão garantida! 🚀✨
+        </p>
     </section>
 </body>
 </html>
